Changes in upping

--- a/app/views/pages/upcoming-movies.html
+++ b/app/views/pages/upcoming-movies.html
@@ -139,6 +139,8 @@
                                                 alt="{{upMovie.upMovieName}}"
                                                 ng-src="{{imagePath}}{{upMovie.upPosterPath}}"
                                                 ng-click="clickedMovie($index)"
+                                                data-toggle="modal"
+                                                data-target="#myModal"
                                                 class="img-responsive img-rounded"
                                                 style="width:30px;height:30px;">
                                         <!-- Modal -->
@@ -172,12 +174,15 @@
                                     </td>
                                     <td class="col-md-3">
                                         <button type="button"
-                                                ng-click="clickedMovie($index)"
-                                                class="btn btn-primary btn-sm"
-                                                data-toggle="modal"
-                                                data-target="#myModal">View Image
+                                                ng-click="movieToCurrent(upMovie.upMovieId)"
+                                                class="btn btn-success btn-sm">
+                                            Move to Current
                                         </button>
-                                        <!--<button type="button" class="btn btn-danger btn-sm">Remove</button>-->
+                                        <button type="button"
+                                                ng-click="removeUpComingMovies(upMovie.upMovieId)"
+                                                class="btn btn-danger btn-sm">
+                                            Remove
+                                        </button>
                                     </td>
                                 </tr>
                                 </tbody>
@@ -195,32 +200,6 @@
     </div>
 </div>
 
-<!--<style type="text/css">-->
-<!--.img-hover img {-->
-<!-- -webkit-transition: all .3s ease; /* Safari and Chrome */-->
-<!-- -moz-transition: all .3s ease; /* Firefox */-->
-<!-- -o-transition: all .3s ease; /* IE 9 */-->
-<!-- -ms-transition: all .3s ease; /* Opera */-->
-<!--transition: all .3s ease;-->
-<!--}-->
-<!--.img-hover img:hover {-->
-<!-- -webkit-backface-visibility: hidden;-->
-<!--backface-visibility: hidden;-->
-<!-- -webkit-transform:translateZ(0) scale(10.20); /* Safari and Chrome */-->
-<!-- -moz-transform:scale(1.20); /* Firefox */-->
-<!-- -ms-transform:scale(1.20); /* IE 9 */-->
-<!-- -o-transform:translatZ(0) scale(1.20); /* Opera */-->
-<!--transform:translatZ(0) scale(1.20);-->
-<!--z-index: 999;-->
-<!--}-->
-
-
-<!--.grayscale {-->
-<!-- -webkit-filter: brightness(1.10) grayscale(100%) contrast(90%);-->
-<!-- -moz-filter: brightness(1.10) grayscale(100%) contrast(90%);-->
-<!--filter: brightness(1.10) grayscale(100%);-->
-<!--}-->
-<!--</style>-->
 <style type="text/css">
     .fileUpload {
         position: relative;
