--- a/app/views/pages/upcoming-movies.html
+++ b/app/views/pages/upcoming-movies.html
@@ -136,7 +136,7 @@
                                     <td class="col-md-3">{{upMovie.upReleaseDate}}</td>
                                     <td class="col-md-3 img-hover">
                                         <img
-                                                alt="No Image"
+                                                alt=""
                                                 ng-src="{{imagePath}}{{upMovie.upPosterPath}}"
                                                 ng-click="clickedMovie($index)"
                                                 data-toggle="modal"
@@ -150,7 +150,7 @@
 
                                             <div class="modal-dialog">
                                                 <center>
-                                                    <img alt="No Image"
+                                                    <img alt=""
                                                          ng-src="{{imagePath}}{{showClickedMovie.upPosterPath}}"
                                                          class="img-responsive img-rounded"
                                                          style="width: 250px;height: 380px;">
