--- a/app/views/pages/location-settings.html
+++ b/app/views/pages/location-settings.html
@@ -58,6 +58,17 @@
                             </div>
                         </div>
 
+                        <!--<div class="form-group">-->
+                            <!--<label for="logo" class="col-md-3 control-label hor-form">Upload New Logo</label>-->
+                            <!--<div class="col-md-9"> <div class="input-group"><span class="input-group-addon">	<i class="fa fa-upload"></i>-->
+									<!--</span>-->
+                                <!--<input type="file" class="form-control" id="logo" placeholder="Mailing Address"-->
+                                       <!--accept="image/*"-->
+                                       <!--ng-change="uploadFile(adminLocation.locationLogo)"-->
+                                       <!--ng-model="adminLocation.locationLogo"></div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+
 
                         <div class="form-group">
                             <div class="col-md-offset-3 col-md-9">
