--- a/app/views/pages/current-movies.html
+++ b/app/views/pages/current-movies.html
@@ -78,6 +78,9 @@
                                 <div class="input-group" id="showtimeDate">
                                     <input type="date" ng-change="sd(showtimeDate)"
                                            ng-model="showtimeDate" name="date">
+                                    <span>&nbsp;&nbsp;to&nbsp;&nbsp;</span>
+                                    <input type="date" ng-change="showTimeRepeat(showtimeRepeatTillDate)"
+                                           ng-model="showtimeRepeatTillDate" name="date">
                                 </div>
                             </div>
                         </div>
@@ -181,10 +184,17 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-sm-offset-3 col-sm-9">
-                                <button type="submit" ng-click="addMoviesToScreen()"
-                                        class="btn btn-primary">Submit
-                                </button>
+                            <div class="col-sm-offset-3">
+                                <div class="col-sm-6">
+                                    <button type="submit" ng-click="addMoviesToScreen()"
+                                            class="btn btn-primary">Submit
+                                    </button>
+                                </div>
+                                <div class="col-md-6">
+                                    <button type="submit" ng-click="resetAddMoviesToScreenFields()"
+                                            class="btn btn-success">Reset
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </form>
@@ -287,7 +297,7 @@
                                         <div class="movieDetails">
                                             <div class="col-lg-3">Name</div>
                                             <div class="col-lg-2">Type</div>
-                                            <div class="col-lg-2">Date </br>(YYYY-MM-DD)
+                                            <div class="col-lg-2">Date </br>(MM/DD/YYYY)
                                             </div>
                                             <div class="col-lg-2">Start Time</div>
                                             <div class="col-lg-2">End Time</div>
@@ -303,26 +313,6 @@
                                     <center>{{organiseScreen.screenName}}</center>
                                 </td>
                                 <td>
-                                    <!--<table class="table table-striped table-bordered table-hover" id="dataTables-example">-->
-                                    <!--<thead>-->
-                                    <!--<tr>-->
-                                    <!--<th>Name</th>-->
-                                    <!--<th>Type</th>-->
-                                    <!--<th>Show Date</th>-->
-                                    <!--<th>Start Time</th>-->
-                                    <!--<th>End Time</th>-->
-                                    <!--</tr>-->
-                                    <!--</thead>-->
-                                    <!--<tbody>-->
-                                    <!--<tr class="odd gradeX"  ng-repeat="data in organiseScreen.details">-->
-                                    <!--<td> {{data.movieName}}</td>-->
-                                    <!--<td>{{data.type}}</td>-->
-                                    <!--<td>{{data.movieShowDate}}</td>-->
-                                    <!--<td>{{data.startTime}}</td>-->
-                                    <!--<td>{{data.endTime}}</td>-->
-                                    <!--</tr>-->
-                                    <!--</tbody>-->
-                                    <!--</table>-->
                                     <div ng-repeat="data in organiseScreen.details">
                                         <div style="display: flex;">
                                             <div class="col-lg-3"> {{data.movieName}}
